<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/big_space"
    android:paddingBottom="@dimen/big_space">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forecast_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forecast_description" />

        <TextView
            android:id="@+id/forecast_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forecast_date"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forecast_max_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forecast_max_temperature"/>

        <TextView
            android:id="@+id/forecast_min_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forecast_min_temperature" />

    </LinearLayout>

    <ImageView
        android:id="@+id/forecast_icon"
        android:contentDescription="@string/forecast_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"/>

</LinearLayout>