<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/profile_first_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_personal_info"
        android:textStyle="bold"
        android:textSize="@dimen/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/profile_email_address"
        app:layout_constraintTop_toBottomOf="@id/profile_first_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <EditText
        android:id="@+id/profile_birth_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/profile_date_of_birth"
        app:layout_constraintTop_toBottomOf="@id/profile_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>